src/qt/libqtextlayout.bf

	
	public void SetTextOption(IQTextOption option)
	{
		this.handle.SetTextOption(option);
	}
	
	public void* TextOption()
	{
		return this.handle.TextOption();
	}
	
	public void SetPreeditArea(int32 position, String text)
	{
		this.handle.SetPreeditArea(position, text);
	}
	
	public int32 PreeditAreaPosition()
	{
		return this.handle.PreeditAreaPosition();
	}
	
	public libqt_string PreeditAreaText()
	{
		return this.handle.PreeditAreaText();
	}
	
	public void SetFormats(QTextLayout__FormatRangePtr[] overrides)
	{
		this.handle.SetFormats(null);
	}
	
	public void[] Formats()
	{
		return this.handle.Formats();
	}
	
	public void ClearFormats()
	{
		this.handle.ClearFormats();
	}
	
	public void SetCacheEnabled(bool enable)
	{
		this.handle.SetCacheEnabled(enable);
	}
	
	public bool CacheEnabled()
	{
		return this.handle.CacheEnabled();
	}
	
	public void SetCursorMoveStyle(int64 style)
	{
		this.handle.SetCursorMoveStyle(style);
	}
	
	public int64 CursorMoveStyle()
	{
		return this.handle.CursorMoveStyle();
	}
	
	public void BeginLayout()
	{
		this.handle.BeginLayout();
	}
	
	public void EndLayout()
	{
		this.handle.EndLayout();
	}
	
	public void ClearLayout()
	{
		this.handle.ClearLayout();
	}
	
	public void CreateLine()
	{
		this.handle.CreateLine();
	}
	
	public int32 LineCount()
	{
		return this.handle.LineCount();
	}
	
	public void LineAt(int32 i)
	{
		this.handle.LineAt(i);
	}
	
	public void LineForTextPosition(int32 pos)
	{
		this.handle.LineForTextPosition(pos);
	}
	
	public bool IsValidCursorPosition(int32 pos)
	{
		return this.handle.IsValidCursorPosition(pos);
	}
	
	public int32 NextCursorPosition(int32 oldPos)
	{
		return this.handle.NextCursorPosition(oldPos);
	}
	
	public int32 PreviousCursorPosition(int32 oldPos)
	{
		return this.handle.PreviousCursorPosition(oldPos);
	}
	
	public int32 LeftCursorPosition(int32 oldPos)
	{
		return this.handle.LeftCursorPosition(oldPos);
	}
	
	public int32 RightCursorPosition(int32 oldPos)
	{
		return this.handle.RightCursorPosition(oldPos);
	}
	
	public void Draw(IQPainter p, IQPointF pos)
	{
		this.handle.Draw(p, pos);
	}
	
	public void DrawCursor(IQPainter p, IQPointF pos, int32 cursorPosition)
	{
		this.handle.DrawCursor(p, pos, cursorPosition);
	}
	
	public void DrawCursor2(IQPainter p, IQPointF pos, int32 cursorPosition, int32 width)
	{
		this.handle.DrawCursor2(p, pos, cursorPosition, width);
	}
	
	public void Position()
	{
		this.handle.Position();
	}
	
	public void SetPosition(IQPointF p)
	{
		this.handle.SetPosition(p);
	}
	
	public void BoundingRect()
	{
		this.handle.BoundingRect();
	}
	
	public double MinimumWidth()
	{
		return this.handle.MinimumWidth();
	}
	
	public double MaximumWidth()
	{
		return this.handle.MaximumWidth();
	}
	
	public void[] GlyphRuns()
	{
		return this.handle.GlyphRuns();
	}
	
	public void SetFlags(int32 flags)
	{
		this.handle.SetFlags(flags);
	}
	
	public int32 NextCursorPosition2(int32 oldPos, int64 mode)
	{
		return this.handle.NextCursorPosition2(oldPos, mode);
	}
	
	public int32 PreviousCursorPosition2(int32 oldPos, int64 mode)
	{
		return this.handle.PreviousCursorPosition2(oldPos, mode);
	}
	
	public void Draw3(IQPainter p, IQPointF pos, QTextLayout__FormatRangePtr[] selections)
	{
		this.handle.Draw3(p, pos, null);
	}
	
	public void Draw4(IQPainter p, IQPointF pos, QTextLayout__FormatRangePtr[] selections, IQRectF clip)
	{
		this.handle.Draw4(p, pos, null, clip);
	}
	
	public void[] GlyphRuns1(int32 from)
	{
		return this.handle.GlyphRuns1(from);
	}
	
	public void[] GlyphRuns2(int32 from, int32 length)
	{
		return this.handle.GlyphRuns2(from, length);
	}
	
}
extension CQt
{
	[LinkName("QTextLayout_new")]
	public static extern void* QTextLayout_new();
	[LinkName("QTextLayout_new2")]
	public static extern void* QTextLayout_new2(libqt_string text);
	[LinkName("QTextLayout_new3")]
	public static extern void* QTextLayout_new3(libqt_string text, void* font);
	[LinkName("QTextLayout_new4")]
	public static extern void* QTextLayout_new4(void* b);
	[LinkName("QTextLayout_new5")]
	public static extern void* QTextLayout_new5(libqt_string text, void* font, void* paintdevice);
	[LinkName("QTextLayout_SetFont")]
	public static extern void QTextLayout_SetFont(void* c_this, void* f);
	[LinkName("QTextLayout_Font")]
	public static extern void QTextLayout_Font(void* c_this);
	[LinkName("QTextLayout_SetRawFont")]
	public static extern void QTextLayout_SetRawFont(void* c_this, void* rawFont);
	[LinkName("QTextLayout_SetText")]
	public static extern void QTextLayout_SetText(void* c_this, libqt_string stringVal);
	[LinkName("QTextLayout_Text")]
	public static extern libqt_string QTextLayout_Text(void* c_this);
	[LinkName("QTextLayout_SetTextOption")]
	public static extern void QTextLayout_SetTextOption(void* c_this, void* option);
	[LinkName("QTextLayout_TextOption")]
	public static extern void* QTextLayout_TextOption(void* c_this);
	[LinkName("QTextLayout_SetPreeditArea")]
	public static extern void QTextLayout_SetPreeditArea(void* c_this, int32 position, libqt_string text);
	[LinkName("QTextLayout_PreeditAreaPosition")]
	public static extern int32 QTextLayout_PreeditAreaPosition(void* c_this);
	[LinkName("QTextLayout_PreeditAreaText")]
	public static extern libqt_string QTextLayout_PreeditAreaText(void* c_this);
	[LinkName("QTextLayout_SetFormats")]
	public static extern void QTextLayout_SetFormats(void* c_this, void[] overrides);
	[LinkName("QTextLayout_Formats")]
	public static extern void[] QTextLayout_Formats(void* c_this);
	[LinkName("QTextLayout_ClearFormats")]
	public static extern void QTextLayout_ClearFormats(void* c_this);
	[LinkName("QTextLayout_SetCacheEnabled")]
	public static extern void QTextLayout_SetCacheEnabled(void* c_this, bool enable);
	[LinkName("QTextLayout_CacheEnabled")]
	public static extern bool QTextLayout_CacheEnabled(void* c_this);
	[LinkName("QTextLayout_SetCursorMoveStyle")]
	public static extern void QTextLayout_SetCursorMoveStyle(void* c_this, int64 style);
	[LinkName("QTextLayout_CursorMoveStyle")]
	public static extern int64 QTextLayout_CursorMoveStyle(void* c_this);
	[LinkName("QTextLayout_BeginLayout")]
	public static extern void QTextLayout_BeginLayout(void* c_this);
	[LinkName("QTextLayout_EndLayout")]
	public static extern void QTextLayout_EndLayout(void* c_this);
	[LinkName("QTextLayout_ClearLayout")]
	public static extern void QTextLayout_ClearLayout(void* c_this);
	[LinkName("QTextLayout_CreateLine")]
	public static extern void QTextLayout_CreateLine(void* c_this);
	[LinkName("QTextLayout_LineCount")]
	public static extern int32 QTextLayout_LineCount(void* c_this);
	[LinkName("QTextLayout_LineAt")]
	public static extern void QTextLayout_LineAt(void* c_this, int32 i);
	[LinkName("QTextLayout_LineForTextPosition")]
	public static extern void QTextLayout_LineForTextPosition(void* c_this, int32 pos);
	[LinkName("QTextLayout_IsValidCursorPosition")]
	public static extern bool QTextLayout_IsValidCursorPosition(void* c_this, int32 pos);
	[LinkName("QTextLayout_NextCursorPosition")]
	public static extern int32 QTextLayout_NextCursorPosition(void* c_this, int32 oldPos);
	[LinkName("QTextLayout_PreviousCursorPosition")]
	public static extern int32 QTextLayout_PreviousCursorPosition(void* c_this, int32 oldPos);
	[LinkName("QTextLayout_LeftCursorPosition")]
	public static extern int32 QTextLayout_LeftCursorPosition(void* c_this, int32 oldPos);
	[LinkName("QTextLayout_RightCursorPosition")]
	public static extern int32 QTextLayout_RightCursorPosition(void* c_this, int32 oldPos);
	[LinkName("QTextLayout_Draw")]
	public static extern void QTextLayout_Draw(void* c_this, void* p, void* pos);
	[LinkName("QTextLayout_DrawCursor")]
	public static extern void QTextLayout_DrawCursor(void* c_this, void* p, void* pos, int32 cursorPosition);
	[LinkName("QTextLayout_DrawCursor2")]
	public static extern void QTextLayout_DrawCursor2(void* c_this, void* p, void* pos, int32 cursorPosition, int32 width);
	[LinkName("QTextLayout_Position")]
	public static extern void QTextLayout_Position(void* c_this);
	[LinkName("QTextLayout_SetPosition")]
	public static extern void QTextLayout_SetPosition(void* c_this, void* p);
	[LinkName("QTextLayout_BoundingRect")]
	public static extern void QTextLayout_BoundingRect(void* c_this);
	[LinkName("QTextLayout_MinimumWidth")]
	public static extern double QTextLayout_MinimumWidth(void* c_this);
	[LinkName("QTextLayout_MaximumWidth")]
	public static extern double QTextLayout_MaximumWidth(void* c_this);
	[LinkName("QTextLayout_GlyphRuns")]
	public static extern void[] QTextLayout_GlyphRuns(void* c_this);
	[LinkName("QTextLayout_SetFlags")]
	public static extern void QTextLayout_SetFlags(void* c_this, int32 flags);
	[LinkName("QTextLayout_NextCursorPosition2")]
	public static extern int32 QTextLayout_NextCursorPosition2(void* c_this, int32 oldPos, int64 mode);
	[LinkName("QTextLayout_PreviousCursorPosition2")]
	public static extern int32 QTextLayout_PreviousCursorPosition2(void* c_this, int32 oldPos, int64 mode);
	[LinkName("QTextLayout_Draw3")]
	public static extern void QTextLayout_Draw3(void* c_this, void* p, void* pos, void[] selections);
	[LinkName("QTextLayout_Draw4")]
	public static extern void QTextLayout_Draw4(void* c_this, void* p, void* pos, void[] selections, void* clip);
	[LinkName("QTextLayout_GlyphRuns1")]
	public static extern void[] QTextLayout_GlyphRuns1(void* c_this, int32 from);
	[LinkName("QTextLayout_GlyphRuns2")]
	public static extern void[] QTextLayout_GlyphRuns2(void* c_this, int32 from, int32 length);
	/// Delete this object from C++ memory
	[LinkName("QTextLayout_Delete")]
	public static extern void QTextLayout_Delete(void* self);
}
public interface IQTextLine
{
	void* NativePtr { get; }
}
public struct QTextLinePtr : IQTextLine, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(IQTextLine other)
	{
		return .(CQt.QTextLine_new((other == default || other.NativePtr == default) ? default : other.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QTextLine_Delete(this.nativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QTextLine_IsValid(this.nativePtr);
	}
	
	public void Rect()
	{
		CQt.QTextLine_Rect(this.nativePtr);
	}
	
	public double X()
	{
		return CQt.QTextLine_X(this.nativePtr);
	}
	
	public double Y()
	{
		return CQt.QTextLine_Y(this.nativePtr);
	}
	
	public double Width()
	{
		return CQt.QTextLine_Width(this.nativePtr);
	}
	
	public double Ascent()
	{
		return CQt.QTextLine_Ascent(this.nativePtr);
	}
	
	public double Descent()
	{
		return CQt.QTextLine_Descent(this.nativePtr);
	}
	
	public double Height()
	{
		return CQt.QTextLine_Height(this.nativePtr);
	}
	
	public double Leading()
	{
		return CQt.QTextLine_Leading(this.nativePtr);
	}
	
	public void SetLeadingIncluded(bool included)
	{
		CQt.QTextLine_SetLeadingIncluded(this.nativePtr, included);
	}
	
	public bool LeadingIncluded()
	{
		return CQt.QTextLine_LeadingIncluded(this.nativePtr);
	}
	
	public double NaturalTextWidth()
	{
		return CQt.QTextLine_NaturalTextWidth(this.nativePtr);
	}
	
	public double HorizontalAdvance()
	{
		return CQt.QTextLine_HorizontalAdvance(this.nativePtr);
	}
	
	public void NaturalTextRect()
	{
		CQt.QTextLine_NaturalTextRect(this.nativePtr);
	}
	
	public double CursorToX(int32* cursorPos)
	{
		return CQt.QTextLine_CursorToX(this.nativePtr, cursorPos);
	}
	
	public double CursorToXWithCursorPos(int32 cursorPos)
	{
		return CQt.QTextLine_CursorToXWithCursorPos(this.nativePtr, cursorPos);
	}
	
	public int32 XToCursor(double x)
	{
		return CQt.QTextLine_XToCursor(this.nativePtr, x);
	}
	
	public void SetLineWidth(double width)
	{
		CQt.QTextLine_SetLineWidth(this.nativePtr, width);
	}
	
	public void SetNumColumns(int32 columns)
	{
		CQt.QTextLine_SetNumColumns(this.nativePtr, columns);
	}
	
	public void SetNumColumns2(int32 columns, double alignmentWidth)
	{
		CQt.QTextLine_SetNumColumns2(this.nativePtr, columns, alignmentWidth);
	}
